[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/victory.png" type="Texture" id=1]
[ext_resource path="res://alagard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://victory.gd" type="Script" id=3]
[ext_resource path="res://audio/acceptance.mp3" type="AudioStream" id=4]
[ext_resource path="res://audio/ending.mp3" type="AudioStream" id=5]
[ext_resource path="res://images/audio off.png" type="Texture" id=6]
[ext_resource path="res://images/audio.png" type="Texture" id=7]
[ext_resource path="res://audio/full ending.mp3" type="AudioStream" id=8]
[ext_resource path="res://images/half victory.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.372549, 0.372549, 0.372549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Victory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="EndingBg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 7

[node name="FullEndingBg" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[node name="AudioStreamPlayerEnding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayerFullEnding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="AudioContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_bottom = 84.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20

[node name="Audio" type="TextureButton" parent="AudioContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 64.0
margin_bottom = 84.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="NarrationContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -143.0
rect_min_size = Vector2( 512, 64 )
custom_styles/panel = SubResource( 1 )

[node name="Narration" type="Label" parent="NarrationContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 19.0
margin_right = 1014.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 2 )
text = "After countless trials, I stumble upon a stairway. Without hesitation, I ascend, hoping to finally reach the mountain's summit. And then, as I gaze down into the depths of the valley, the undeniable truth reveals itself... This world is not the one I left behind. It's a different one, shrouded in truly endless fog and crowned with alien mountains. 
Yet, instead of despair, a sense of contentment washes over me. Accepting my fate, I release the futile pursuit of my past. Once more, I choose to press forward, delving deeper into the unknown, eager to uncover its mysteries and shape my own destiny. 
For I am, and always will be, a wanderer above the sea of fog..."
autowrap = true

[node name="FullNarration" type="Label" parent="NarrationContainer"]
unique_name_in_owner = true
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 2 )
text = "After countless trials, I stumble upon a stairway. Without hesitation, I ascend, hoping to finally reach the mountain's summit. And then, as I gaze down into the depths of the valley, the undeniable truth reveals itself... This world is not the one I left behind. It's a different one, shrouded in truly endless fog and crowned with alien mountains. 
Yet, instead of despair, a sense of contentment washes over me. Accepting my fate, I release the futile pursuit of my past. With the Cane of Guidance in hand, I find solace in the clarity it brings, illuminating the path ahead in the midst of uncertainty. Once more, I choose to press forward, delving deeper into the unknown, eager to uncover its mysteries and shape my own destiny. 
For I am, and always will be, a wanderer above the sea of fog..."
autowrap = true

[connection signal="finished" from="AudioStreamPlayerEnding" to="." method="_on_ending_finished"]
[connection signal="finished" from="AudioStreamPlayerFullEnding" to="." method="_on_ending_finished"]
[connection signal="toggled" from="AudioContainer/Audio" to="." method="_on_audio_toggled"]
